<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HomeGuard</string>
    <string name="filebrowser_sdfail">Unable to open SD card. Please check it is mounted correctly.</string>
    <string name="filebrowser_root">&lt;root&gt;</string>
    <string name="filebrowser_parent">..</string>
    <string name="filebrowser_title">Select media to play</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="ml_no_media_dir">No Media Directory</string>
    <string name="sortby">Sort By...</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="searchable_hint">Search...</string>
    <string name="searchable_label">VLC media player</string>
    <string name="search_history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="search_found_results">%1$d Results Found</string>
    <string name="show_player">Show Player</string>
    <string name="hide_mini_player">Hide Mini-Player</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="not_show_again">"Don't show this Message again."</string>
    <string name="beta_warning">This is a early alpha version\n(NOT STABLE!).</string>
    <string name="info_title">Information</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    
    <string name="home_camlist">Camera List</string>
    <string name="home_setting">Setting</string>
    <string name="home_eventlog">EventLog</string>
    <string name="home_about">About</string>
    <string name="home_exit">Exit</string>
</resources>
