<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    
    <TextView 
    	android:layout_height="wrap_content" 
    	android:text="mail" 
    	android:layout_width="wrap_content" 
    	android:id="@+id/home_mail" 
    	android:layout_alignParentTop="true" 
    	android:layout_alignParentLeft="true" 
    	android:textColor="#FFFFFFFF">
    </TextView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:id="@+id/linearLayout1">
        <RelativeLayout android:layout_weight="1" android:layout_height="match_parent" android:layout_width="wrap_content">
            <ImageButton android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:id="@+id/home_camlist" android:src="@drawable/camlist_btn" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#00000000"></ImageButton>
            <TextView android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/home_camlist" android:layout_marginTop="75dp" android:textColor="#FF0000FF"></TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_weight="1" android:layout_height="match_parent" android:layout_width="wrap_content">
            <ImageButton android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:id="@+id/home_setting" android:src="@drawable/setting_btn" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#00000000"></ImageButton>
            <TextView android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/home_setting" android:layout_marginTop="75dp" android:textColor="#FF0000FF"></TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_weight="1" android:layout_height="match_parent" android:layout_width="wrap_content">
            <ImageButton android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:id="@+id/home_eventlog" android:src="@drawable/event_btn" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#00000000"></ImageButton>
            <TextView android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/home_eventlog" android:layout_marginTop="75dp" android:textColor="#FF0000FF"></TextView>
            <TextView android:layout_width="wrap_content" android:textStyle="bold" android:textColor="#FFFF0000" android:id="@+id/home_event_count" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignRight="@+id/home_eventlog"></TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_weight="1" android:layout_height="match_parent" android:layout_width="wrap_content">
            <ImageButton android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:id="@+id/home_info" android:src="@drawable/info_btn" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#00000000"></ImageButton>
            <TextView android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/home_about" android:layout_marginTop="75dp" android:textColor="#FF0000FF"></TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_weight="1" android:layout_height="match_parent" android:layout_width="wrap_content">
            <ImageButton android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:id="@+id/home_exit" android:src="@drawable/exit_btn" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#00000000"></ImageButton>
            <TextView android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/home_exit" android:layout_marginTop="75dp" android:textColor="#FF0000FF"></TextView>
        </RelativeLayout>
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:src="@drawable/logo" android:id="@+id/home_logo" android:layout_height="wrap_content" android:layout_above="@+id/linearLayout1" android:layout_centerHorizontal="true" android:layout_marginBottom="35dp"></ImageView>
    <ImageView android:layout_width="wrap_content" android:id="@+id/home_ss" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true"></ImageView>
    
    
    
</RelativeLayout>
